--- a/portfolio_yao/thanks.html
+++ b/portfolio_yao/thanks.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="./assets/css/contact.css">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/d4da78b684.js" crossorigin="anonymous"></script>
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body id="thanks">
@@ -63,7 +65,7 @@
                 </li>
                 <li itemprop="itemListElement" itemscope itemtype="https://schema.org/ListItem" class="en">
                     <a itemprop="item" href="works.html">
-                        <span itemprop="name">Thanks!</span>
+                        <span itemprop="name">Thanks!!</span>
                     </a>
                     <meta itemprop="position" content="2">
                 </li>
@@ -71,12 +73,17 @@
         </div>
     </div>
     <main class="contact" id="contact-main">
-        <div class="mv-img mb150">
-            <img src="./assets/img/thanks.jpg" alt="お問い合わせありがとうございました" class="full">
+        <div class="section-mv mb100 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="section-obj obj02 block"></div>
+            <div class="mv-img prelative">
+                <img src="./assets/img/thanks.jpg" alt="お問い合わせありがとうございました" class="full">
+            </div>
         </div>
 
-        <section class="section thanks-head mb150">
-            <div class="inner">
+        <section class="section thanks-head mb150 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="inner prelative">
                 <span class="iblock mb1">お問い合わせフォームの送信を完了しました。</span>
                 <h2 class="mb70"><span class="orange">T</span>hank <span class="green">y</span>ou for your inquiry</h2>
                 <p class="mb2">
