--- a/portfolio_yao/work2.html
+++ b/portfolio_yao/work2.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="./assets/css/works.css">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/d4da78b684.js" crossorigin="anonymous"></script>
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body id="work">
@@ -77,11 +79,17 @@
         </div>
     </div>
     <main class="work2" id="work2">
-        <div class="mv-img mb100">
-            <img src="./assets/img/work.jpg" alt="サンプル/会員制コワーキングLP" class="full">
+        <div class="section-mv mb100 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="section-obj obj02 block"></div>
+            <div class="mv-img prelative">
+                <img src="./assets/img/work.jpg" alt="サンプル/会員制コワーキングLP" class="full prelative">
+            </div>
         </div>
-        <section class="section work-main">
-            <div class="inner work-content">
+        <section class="section work-mai mb150 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="section-obj obj02 block"></div>
+            <div class="inner work-content prelative">
                 <div class="mb100 work-content_head">
                     <span class="iblock mb1">WEB</span>
                     <p class="work-content_intro mb1">コーポレートサイト</p>
@@ -99,8 +107,10 @@
                 </div>
             </div>
         </section>
-        <section class="section mb150">
-            <div class="inner otherworks">
+        <section class="section mb150 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="section-obj obj02 block"></div>
+            <div class="inner otherworks prelative">
                 <h2 class="center mb70">Other Works</h2>
                 <div class="flex_content flex_justify mb70 gap works-inner_content">
                     <div class="works-inner_item">
