--- a/portfolio_yao/works.html
+++ b/portfolio_yao/works.html
@@ -30,6 +30,8 @@
     <link rel="stylesheet" href="./assets/css/works.css">
     <!-- fontawesome -->
     <script src="https://kit.fontawesome.com/d4da78b684.js" crossorigin="anonymous"></script>
+    <!-- jquery -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.7.1/jquery.min.js"></script>
 </head>
 
 <body id="works">
@@ -71,8 +73,10 @@
         </div>
     </div>
     <main>
-        <section class="section works mb150">
-            <div class="inner works-inner">
+        <section class="section works mb150 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="section-obj obj02 block"></div>
+            <div class="inner works-inner prelative">
                 <div class="flex_content flex_justify mb70 gap works-inner_content">
                     <div class="works-inner_item">
                         <div class="mb2">
@@ -126,8 +130,10 @@
         <!-- ーーーWorksここまでーーー -->
 
         <!-- ーーーaboutここからーーー -->
-        <div class="section about mb200">
-            <div class="inner about-inner">
+        <div class="section about mb200 prelative">
+            <div class="section-obj obj01 block"></div>
+            <div class="section-obj obj02 block"></div>
+            <div class="inner about-inner prelative">
                 <div class="flex_content flex_middle about-inner_gap">
                     <div class="about-inner_img">
                         <img src="./assets/img/about.png" alt="toricom design" class="full">
@@ -142,7 +148,7 @@
                             毎日かわいいです。</p>
                         <div class="prelative btn">
                             <div class="iblock btn-hover">
-                                <a href="/about.html" class="center">View More About</a>
+                                <a href="about.html" class="center">View More About</a>
                                 <i class="fa-solid fa-chevron-right"></i>
                             </div>
                         </div>
